# AOA

./: .gitignore  .pre-commit-config.yaml  .release_notes_0.8.0.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yml
data/: dane_20260410_211525.csv  dane_20260419_205851.csv  dane_20260422_194822.csv  dane_20260422_204132.csv  test_20260410_211525.csv  test_20260422_194822.csv  test_20260422_194823.csv  train_20260410_211525.csv  train_20260422_194822.csv  train_20260422_204135.csv
data/sample/: logistics.csv  quality.csv  sample_table.csv  schedule.csv  service.csv  test_20260505_083035.csv  train_20260419_205849.csv  warehouse.csv
docs/: alice_brain.json  architecture.md  guide.md  theory.md  workflows.md
examples/workflows/: basic_pipeline.py
scripts/: generate_assistant_model_pack.py
src/AOA/: app.py  cli.py  config.py  messages.py
src/AOA/assets/assistant/: README.md  model_pack.json
src/AOA/cli/: __init__.py  helpers.py  interactive.py  main.py  parser.py
src/AOA/cli/commands/: __init__.py  analytics.py  generate.py  preview.py  solve.py  sto.py  train.py  workflow.py
src/AOA/core/: assistant_service.py  constants.py  data_analytics_service.py  data_generation.py  data_io.py  dataset_ops.py  drawio_service.py  evaluation.py  features.py  file_manager_service.py  learning_content.py  models.py  release_segments.py  report_composer_service.py  result_viewer_service.py  scheduling.py  self_learning.py  services.py  sto_models.py  tabpfn_models.py  visualization_service.py
src/AOA/core/diagrams/: gantt_chart.py  (+4 more)
src/AOA/gui/: assistant_dock.py  assistant_panel.py  main_window.py
src/AOA/utils/: error_utils.py  logging_utils.py  threading_utils.py
tests/cli/: conftest.py  test_cli_commands.py  test_cli_interactive.py  test_cli_main.py  test_cli_workflow.py
tests/core/: test_assistant_service.py  test_data_analytics_service.py  test_data_generation.py  test_data_io.py  test_data_mapping_service.py  test_dataset_ops.py  test_drawio_service.py  test_evaluation.py  test_features.py  test_features_extended.py  test_file_manager_service.py  test_io_and_split_extended.py  test_learning_content.py  test_logging_utils.py  test_ml_model_registry.py  test_mlstack_workflow.py  test_model_pack_flows.py  test_model_pack_security.py  test_models.py  test_models_extended.py  test_release_segments.py  test_report_composer_service.py  test_repository_layout_cleanup.py  test_result_viewer_service.py  test_scheduling.py  test_scheduling_extended.py  test_services_extended.py  test_services_extra.py  test_services_flows.py  test_sto_models.py  test_sto_models_extended.py  test_tabpfn_models.py  test_theory_page_data.py  test_train_test_metrics.py  test_visualization_service.py  test_visualization_service_extended.py
tests/gui/: test_assistant_operator_tasks.py  test_assistant_panel_voice.py
(+43 files in other folders)
