[project]
name = "TOOLS"
version = "0.1.0"
description = "AOA"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "customtkinter",
    "tabulate",
    "scipy",
    "scikit-learn",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
