[build-system]
requires = ["setuptools>=69,<80", "wheel>=0.43,<1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aoa"
version = "0.2.1"
description = "Production Optimization / AOA"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "pandas>=2.2,<2.4",
    "numpy>=1.26,<3.0",
    "matplotlib>=3.8,<3.11",
    "seaborn>=0.13,<0.14",
    "customtkinter>=5.2,<5.3",
    "tabulate>=0.9,<0.10",
    "scipy>=1.17.1,<1.18",
    "scikit-learn>=1.5,<1.8",
]

[project.scripts]
aoa = "AOA.app:main"

[dependency-groups]
dev = [
    "pytest>=8.3,<9.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
